# XiaoMi-Cup

./: README.md  all.sh  colconbuild.sh  gazebo.sh  比赛任务.md
cyberdog_sim/: colconbuild.sh  killgazebo.sh
src/aruco_interfaces/: CMakeLists.txt  package.xml
src/aruco_interfaces/msg/: ArucoMarkers.msg
src/control/: CMakeLists.txt  package.xml
src/control/config/: complete_process.yaml  points.yaml
src/control/include/: lowpass_filter.hpp
src/control/launch/: complete_process_launch.py
src/control/lcm_defines/: centroid_msg_lcmt.lcm  robot_control_cmd_lcmt.lcm  simulator_lcmt.lcm
src/control/lcm_defines/lcm_types/: centroid_msg_lcmt.hpp  robot_control_cmd_lcmt.hpp  simulator_lcmt.hpp
src/control/src/: complete_process.cpp  linetrack.cpp  slope_controller.cpp  stand.cpp  walk_straight.cpp
src/qr_detection/: CMakeLists.txt  package.xml
src/qr_detection/include/qr_detection/: qr_detection.hpp
src/qr_detection/src/: qr_detector.cpp
src/vision_pkg/: setup.py
src/vision_pkg/vision_pkg/: arrow_detector.py  detect.py  linetrack.py
vision_pkg/: linetrack.py  package.xml
vision_pkg/vision_pkg/: linetrack.py
